# esp32-lvgl-eez-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  fullbuild.sh  partitions_example.csv  prepare.sh  sdkconfig  use_ESP32_ILI9341_240x320.sh  use_ESP32_ILI_320x240.sh  use_ESP32_TouchDown.sh
components/FT6X36-IDF/: CMakeLists.txt  README.md
components/FT6X36-IDF/include/: L58Touch.h
components/eez-demo/counter/: flow_def.c  flow_def.h  images.c  images.h  screens.c  screens.h  vars.h
configs/: CalEPD_CMakeLists.txt  lv_port_disp.c_ESP32_ILI9341_240x320  main.c_ILI9341_240x320  main.h_ILI9341_240x320  sdkconfig.HELTEC  sdkconfig.ILI9341_240X320  sdkconfig.ILI_240X320  sdkconfig.Nscreen32  sdkconfig.calepd_gdew042t2  sdkconfig.calepd_gdew042t2_rtos_debug_enable  sdkconfig.calepd_gdew042t2_rtos_debug_working  sdkconfig.epaper  sdkconfig.inkplate_6  sdkconfig.ssd1306  sdkconfig.st7789  ssd1306.readme
eez-project/: esp32-lvgl-eez-demo.eez-project  esp32-lvgl-eez-demo.eez-project-ui-state
eez-project/esp32-lvgl-eez-ESP32_ILI9341_240x320/: esp32-lvgl-eez-ESP32_ILI9341_240x320.eez-project
eez-project/esp32-lvgl-eez-ESP32_ILI_240x320/: esp32-lvgl-eez-ESP32_ILI_240x320.eez-project
eez-project/esp32-lvgl-eez-ESP32_TouchDown/: esp32-lvgl-eez-ESP32_TouchDown.eez-project
eez-project/esp32-lvgl-esp-ESP32_Heltec/Hello_world/: Hello_world.eez-project
examples/Common/: CMakeLists.txt  gui_task.c  main.c  protocol_examples_common.h
examples/Common/lv_port/: lv_port_disp.c
examples/Generic/: gui_task.h  main.md
examples/Generic/ui/: README.md  flow_def.h  screens.c
examples/Heltec/: esp32-lvgl-eez-demo-Heltec.eez-project  use.sh
examples/Heltec/ui/: flow_def.c  flow_def.h  images.c  screens.c  screens.h  styles.h
examples/ILI9341_240x320/: esp32-lvgl-eez-demo-ILI9341_240x320.eez-project  main.c  use.sh
examples/Inkplate6/: esp32-lvgl-eez-demo-Inkplate6.eez-project  use.sh
examples/Inkplate6/ui/: ui.c  (+7 more)
examples/TouchDown/: esp32-lvgl-eez-demo-TouchDown.eez-project  sdkconfig  use.sh
main/: CMakeLists.txt  esp32-lvgl-eez-demo-Generic.eez-project  gui_task.c  main.h  sdkconfig  use.sh
main/eez-project/: esp32-lvgl-eez-demo.eez-project  esp32-lvgl-eez-demo.eez-project-ui-state
main/eez-project/esp32-lvgl-eez-ESP32_ILI9341_240x320/: esp32-lvgl-eez-ESP32_ILI9341_240x320.eez-project  esp32-lvgl-eez-ESP32_ILI9341_240x320.eez-project-ui-state
main/eez-project/esp32-lvgl-eez-ESP32_TouchDown/: esp32-lvgl-eez-ESP32_TouchDown.eez-project  esp32-lvgl-eez-ESP32_TouchDown.eez-project-ui-state
main/eez-project/esp32-lvgl-esp-ESP32_Heltec/: Hello_world.eez-project  Hello_world.eez-project-ui-state
main/lv_port/: lv_port.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
main/ui/: flow_def.c  flow_def.h  images.h  screens.c  screens.h  ui.h  ui_font_big_font.c  ui_font_montserrat_semi_bold_20.c  ui_font_small_font.c  vars.h
(+24 files in other folders)
